# indiaquant-mcp

./: .env.example  .gitignore  README.md  config.py  pyproject.toml  render.yaml  requirements.txt  server.py
modules/: black_scholes.py  cache.py  market_data.py  options_analyzer.py  portfolio_manager.py  signal_generator.py
tests/: test_black_scholes.py  test_signals.py  test_tools.py
